<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
<variable name="appviewmodel" type="net.nikcain.altazgoto.AppViewModel"/>
</data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/LogText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:lines="3"
            android:text="@{appviewmodel.getDebugText()}"
            android:textColor="@color/night_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="sasuishfudisfhdsuf dufhsdi udhf sdufhui dufh sd fsduh sdihf sdifhs" />

        <ImageView
            android:id="@+id/connectedIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/connected_indicator_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LogText"
            app:srcCompat="@android:drawable/checkbox_off_background" />

        <Button
            android:id="@+id/selecttargetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_target"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connectedIndicator" />

        <TextView
            android:id="@+id/selectedtargetinfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{appviewmodel.getSelectedTargetText()}"
            app:layout_constraintEnd_toEndOf="@+id/selecttargetbtn"
            app:layout_constraintStart_toStartOf="@id/selecttargetbtn"
            app:layout_constraintTop_toBottomOf="@id/selecttargetbtn" />

        <TextView
            android:id="@+id/currenttargetinfo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@{appviewmodel.getCurrentTargetText()}"
            app:layout_constraintEnd_toEndOf="@+id/selectedtargetinfo"
            app:layout_constraintStart_toStartOf="@id/selectedtargetinfo"
            app:layout_constraintTop_toBottomOf="@id/selectedtargetinfo" />

        <Button
            android:id="@+id/gototargetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/goto_target"
            app:layout_constraintEnd_toEndOf="@+id/selecttargetbtn"
            app:layout_constraintStart_toStartOf="@id/selecttargetbtn"
            app:layout_constraintTop_toBottomOf="@id/currenttargetinfo" />


        <LinearLayout
            android:id="@+id/altazselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="@+id/gototargetbtn"
            app:layout_constraintStart_toStartOf="@id/gototargetbtn"
            app:layout_constraintTop_toBottomOf="@id/gototargetbtn">

            <EditText
                android:id="@+id/az_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/az_hint"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/alt_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/alt_hint"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/gotoAltAzbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/goto_altaz" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stopctrls"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="@+id/altazselect"
            app:layout_constraintStart_toStartOf="@id/altazselect"
            app:layout_constraintTop_toBottomOf="@id/altazselect">

            <Button
                android:id="@+id/alignbtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/align" />

            <Button
                android:id="@+id/movementbtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/movement" />

            <Button
                android:id="@+id/stopbtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/stop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trackinggroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="537dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/trackingonoff"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tracking" />

            <ImageView
                android:id="@+id/trackingIndicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tracking_indicator_desc"
                app:srcCompat="@android:drawable/btn_star_big_off" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>